Implement service for handle messaging in api lower than 23

--- a/reliablemessaging/src/main/AndroidManifest.xml
+++ b/reliablemessaging/src/main/AndroidManifest.xml
@@ -9,5 +9,6 @@
             android:permission="android.permission.BIND_JOB_SERVICE">
 
         </service>
+        <service android:name=".service.MessageService"/>
     </application>
 </manifest>
