--- a/androidreliablemessaginglibrary/build.gradle
+++ b/androidreliablemessaginglibrary/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'kotlin-android'
+
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.1"
@@ -28,6 +30,9 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
+    api "android.arch.work:work-runtime-ktx:1.0.1"
+    implementation 'com.squareup.retrofit2:retrofit:2.5.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
