--- a/androidreliablemessaginglibrary/build.gradle
+++ b/androidreliablemessaginglibrary/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'androidx.appcompat:appcompat:1.0.2'
-    api "android.arch.work:work-runtime-ktx:1.0.1"
+    api 'androidx.work:work-runtime-ktx:2.2.0'
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
 
     testImplementation 'junit:junit:4.12'
