--- a/androidreliablemessaginglibrary/src/androidTest/AndroidManifest.xml
+++ b/androidreliablemessaginglibrary/src/androidTest/AndroidManifest.xml
@@ -3,4 +3,5 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
+    <application android:usesCleartextTraffic="true"/>
 </manifest>
